add port offset field and add offset to admin and http port